--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <br><br>
       I know times may be hard right now, and we’ve both faced challenges that sometimes seem overwhelming. But please remember, we have each other—and together, there is nothing we cannot overcome. These bumps in the road are lessons in disguise. We will learn, grow, and emerge stronger, side by side, building a peaceful and joyful future as a family.
       <br><br>
-      Your kindness, strength, and unwavering belief in me keep me going even when life feels tough. Thank you for those late-night talks, the warm hugs, and the countless little ways you show your love every single day. I am truly blessed to call you my mom.
+      Your kindness, strength, and unwavering belief in me keep me going even when life feels tough. Thank you for those serious talks, the warm hugs, and the countless little ways you show your love every single day. I am truly blessed to call you my mom.
       <br><br>
       So today, I hope you can relax, smile, and feel how deeply you are loved—not just by me, but by everyone whose life you’ve touched. You deserve all the happiness in the world and more.
       <br><br>
