--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Happy Mother's Day</title>
+  <title>❤️ Happy Mother's Day</title>
+  <!-- Favicon as heart emoji -->
+  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='80' font-size='90'%3E❤️%3C/text%3E%3C/svg%3E">
   <style>
     /* ==== Reset & Base ==== */
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -78,11 +80,30 @@
       font-size: 1rem;
       line-height: 1.6;
       max-width: 800px;
-      margin: 0 auto 2rem;
+      margin: 0 auto 1rem;
       background: rgba(255,255,255,0.85);
       padding: 1.5rem;
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      color: #333;
+      transition: max-height 0.5s ease;
+    }
+
+    /* Hide/Show button */
+    #toggle-btn {
+      display: none;
+      margin: 0 auto 2rem;
+      padding: 0.5rem 1.5rem;
+      font-size: 0.9rem;
+      background: transparent;
+      border: 2px solid #FFDAB9;
+      border-radius: 5px;
+      color: #FFDAB9;
+      cursor: pointer;
+      transition: background 0.3s, color 0.3s;
+    }
+    #toggle-btn:hover {
+      background: rgba(255,218,185,0.8);
       color: #333;
     }
 
@@ -101,7 +122,7 @@
 
     @media (min-width: 600px) {
       h1 { font-size: 3.5rem; }
-      #open-btn { font-size: 1.1rem; padding: 1rem 2.5rem; }
+      #open-btn, #toggle-btn { font-size: 1.1rem; padding: 1rem 2.5rem; }
     }
   </style>
 </head>
@@ -132,6 +153,7 @@
       <br>
       <strong>Richie</strong>
     </div>
+    <button id="toggle-btn">Hide</button>
     <audio id="bg-music" src="music.mp3" preload="auto"></audio>
   </div>
 
@@ -143,17 +165,30 @@
       document.getElementById('title').classList.add('fade-in');
       document.getElementById('from').classList.add('slide-up');
       setTimeout(() => {
-        const btn = document.getElementById('open-btn');
-        btn.style.opacity = '1';
+        document.getElementById('open-btn').style.opacity = '1';
       }, 4000);
     });
 
     document.getElementById('open-btn').addEventListener('click', () => {
       document.getElementById('splash').style.display = 'none';
       document.getElementById('letter-container').style.display = 'block';
-      const music = document.getElementById('bg-music');
-      music.currentTime = 0;
-      music.play();
+      document.getElementById('bg-music').play();
+      // show toggle after 10s
+      setTimeout(() => {
+        document.getElementById('toggle-btn').style.display = 'block';
+      }, 10000);
+    });
+
+    document.getElementById('toggle-btn').addEventListener('click', () => {
+      const letter = document.getElementById('letter');
+      const btn = document.getElementById('toggle-btn');
+      if (letter.style.display === 'none') {
+        letter.style.display = 'block';
+        btn.textContent = 'Hide';
+      } else {
+        letter.style.display = 'none';
+        btn.textContent = 'Show';
+      }
     });
   </script>
 
